adding some minor fixes to the characters screen, linking the routing to this screen from the homepage

--- a/src/pages/homepage/Home.styles.css
+++ b/src/pages/homepage/Home.styles.css
@@ -36,6 +36,11 @@
   transform: translateX(-50%);
 }
 
+.route {
+  text-decoration: none;
+  color: #f9f9f9;
+}
+
 /* responsive media queries */
 
 /* big landscape tablets, laptops, and desktops */
