--- a/src/components/header/header.styles.css
+++ b/src/components/header/header.styles.css
@@ -1,4 +1,4 @@
-.header-container {
+.dekstop-header-container {
   width: 90%;
   height: 70px;
   margin: 0 auto;
@@ -13,7 +13,6 @@
   position: fixed;
   top: 0;
   z-index: 10;
-  cursor: pointer;
 }
 
 .option {
@@ -23,4 +22,71 @@
 
 .option:hover {
   color: #8e8ddb;
+}
+
+.mobile-navbar-header {
+  width: 90%;
+  height: 80px;
+  margin: 0 auto;
+  background: linear-gradient(
+    180deg,
+    rgba(25, 25, 25, 0.63) 0%,
+    rgba(25, 25, 25, 0) 100%
+  );
+  justify-content: flex-end;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  z-index: 10;
+  display: none;
+}
+
+.close-btn {
+  position: absolute;
+  top: 30px;
+  right: 20px;
+  cursor: pointer;
+}
+
+.mobile-header-container {
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 250px;
+  height: 100%;
+  background-color: transparent;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  transition: all 0.3s linear;
+  z-index: 11;
+  backdrop-filter: blur(15px);
+  padding-top: 5rem;
+}
+
+.mobile-option {
+  color: #f9f9f9;
+  font-size: 1.6rem;
+  margin: 1.5rem 0;
+}
+
+.mobile-option:hover {
+  color: #8e8ddb;
+}
+
+.show {
+  transform: translate(0);
+}
+
+.hide {
+  transform: translate(100%);
+}
+
+@media (max-width: 801px) {
+  .dekstop-header-container {
+    display: none;
+  }
+  .mobile-navbar-header {
+    display: flex;
+  }
 }
