--- a/src/pages/vehicle-page/vehicle-page.styles.css
+++ b/src/pages/vehicle-page/vehicle-page.styles.css
@@ -1,18 +1,26 @@
-.page-wrapper {
+.vehicles-page-wrapper {
   width: 100%;
   min-height: 100vh;
   background: radial-gradient(
       50% 50% at 50% 50%,
-      rgba(0, 0, 0, 0.12) 0%,
+      rgba(0, 0, 0, 0.44) 0%,
       rgba(0, 0, 0, 0.69) 100%
     ),
-    url("../../assets/character-bg.jpg");
+    url("../../assets/vehicles-bg.jpg");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   display: flex;
   justify-content: center;
   align-items: center;
+  position: relative;
+}
+
+.back-btn {
+  cursor: pointer;
+  position: absolute;
+  top: 80px;
+  left: 20px;
 }
 
 .details-container {
